--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build and deploy
+      - name: Copy subfolder contents to root
         run: |
-          cd public
-          # Add any build commands here if needed
-          git init
+          cp -r public/* .
+          # Add any build or processing steps if needed
           git add .
-          git commit -m "Deploy "
+          git commit -m "Deploy"
           git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" main:gh-pages
         env:
           CI: true
